feat: expand db init data and add more wallet endpoint
